Added Google Fonts

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ p {
     letter-spacing: 0.1rem;
     margin: 0px;
     margin-bottom: 5px;
-    /* font-family: 'Press Start 2P'; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #score {
